# multilingual-sales-support-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  ui.py
app/agents/: reasoning.py  retrieval.py  safety.py
app/chains/: orchestrator.py
app/prompts/: reasoning_few_shot.yaml  reasoning_zero_shot.yaml
app/styles/: __init__.py  apple.css  apple.js
app/utils/: injection_patterns.py  language.py  logging.py  mistral_client.py
data/eval/: README.md  annotation_pipeline.md  gold_qa_en.jsonl  gold_qa_es.jsonl  gold_qa_hi.jsonl
data/raw/: faqs_en.jsonl  faqs_es.jsonl  faqs_hi.jsonl
docs/: architecture.md  deviations.md  eval_report.md  framework_comparison.md
evals/: harness.py  report.py  run_accuracy.py  run_hallucination.py  run_safety.py
evals/framework_benchmark/: bench_haystack.py  bench_langchain.py  bench_llamaindex.py  bench_ragatouille.py  bench_txtai.py  common.py  compare.py
evals/results/: accuracy.jsonl  accuracy_summary.json  bench_haystack.json  bench_langchain_faiss.json  bench_llamaindex.json  bench_txtai.json  eval_report.md  framework_bakeoff.md  hallucination_summary.json  safety_summary.json
ingest/: _client.py  annotate.py  build_faiss.py  chunking.py  generate_eval.py  generate_faqs.py  translate_faqs.py  validate_stage1.py
tests/: test_api.py  test_evals.py  test_framework_bench.py  test_orchestrator.py  test_reasoning.py  test_retrieval.py  test_retrieval_agent.py  test_safety.py
